add getTotal endpoint
